# Popeye-Tars-Mars-Tev

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONSENSUS.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  OPERATOR_RUNBOOK.md  README.md  SECURITY.md  SOAK_TEST_CHECKLIST.md  TESTNET.md  TRADEMARK_POLICY.md
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: ci.yml  pages.yml
config/: node-a.toml  node-b.toml  node-c.toml
config/testnet/: node-a.toml  node-b.toml  node-c.toml  node-d.toml
consensus/: Cargo.toml  README.md
consensus/src/: config.rs  engine.rs  error.rs  lib.rs  types.rs
docs/: RELEASE_PROCESS.md  _config.yml  architecture.html  architecture.md  components.md  index.html  index.md  operations.md  quickstart.html  quickstart.md  roadmap.md  testing.md
mars/: Cargo.toml  README.md
mars/src/: block.rs  error.rs  lib.rs  runtime.rs  state.rs  tx.rs
node/: Cargo.toml  README.md
node/src/: config.rs  lib.rs  main.rs  node.rs
popeye/: Cargo.toml  README.md
popeye/src/: config.rs  error.rs  lib.rs  libp2p_network.rs  message.rs  network.rs  peer.rs
scripts/: collect-logs.ps1  health-check.ps1  metrics-snapshot.ps1  run-soak-test.ps1  smoke-test.ps1  start-devnet.ps1  start-testnet-v0.ps1  stop-devnet.ps1
tar/: Cargo.toml  README.md
tar/src/: block_store.rs  consensus_store.rs  error.rs  lib.rs  state_store.rs  storage.rs
tev/: Cargo.toml  README.md
tev/src/: error.rs  lib.rs  signature.rs  verified.rs
