[workspace]
members = [
    "mars",
    "popeye",
    "tev",
    "tar",
    "node"
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Unykorn Team"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
bincode = "1.3"
ed25519-dalek = "2"
rand = "0.8"
toml = "0.8"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# libp2p networking
libp2p = { version = "0.54", features = [
    "gossipsub",
    "identify",
    "kad",
    "mdns",
    "noise",
    "tcp",
    "tokio",
    "yamux",
    "macros"
] }
