[package]
name = "popeye"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "POPEYE - P2P Networking layer for Unykorn L1"

[dependencies]
tokio.workspace = true
thiserror.workspace = true
serde.workspace = true
bincode.workspace = true
libp2p.workspace = true
futures.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
