[package]
name = "tar"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "TAR - Transaction & Archive Repository for Unykorn L1"

[dependencies]
serde.workspace = true
bincode.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.10"
