[package]
name = "tev"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "TEV - Trusted Execution & Validation for Unykorn L1"

[dependencies]
thiserror.workspace = true
ed25519-dalek = { workspace = true, features = ["rand_core"] }
rand = "0.8"

[dev-dependencies]
